"""
Structural Python code that mirrors the PlantUML architecture diagram.
 
This module is intentionally minimal and focuses on the relationships
between components. The actual implementation lives in the main
packages under core/ and plugins/.
"""
 
from __future__ import annotations
 
import multiprocessing
from typing import Any, List, Protocol, runtime_checkable
 
 
Record = dict[str, Any]

# ── Contracts (mirrors core/contracts.py) ─────────────────────────────────────
 
@runtime_checkable
class DataSink(Protocol):
    def write(self, key: str, data: Any) -> None:
        ...
 
 
@runtime_checkable
class PipelineService(Protocol):
    def execute(self, raw_data: List[Any]) -> None:
        ...

@runtime_checkable
class TelemetrySubject(Protocol):
    def get_stats(self) -> dict:
        ...


# ── Input (mirrors plugins/inputs.py) ─────────────────────────────────────────
 
class StreamingCSVReader:
    def __init__(self, raw_queue: multiprocessing.Queue, config: dict) -> None:
        self.raw_queue = raw_queue
        self.filepath = config["dataset_path"]
        self.delay = config["pipeline_dynamics"]["input_delay_seconds"]
        self.schema: dict = {}
 
    def run(self) -> None:
        ...
 
 # ── Core (mirrors core/engine.py) ─────────────────────────────────────────────
 
def verify_signature(raw_value: float, signature: str,
                     secret_key: str, iterations: int) -> bool:
    """Pure function — Functional Core. PBKDF2-HMAC-SHA256 check."""
    ...
 
 
class CoreWorker:
    SENTINEL = None
 
    def __init__(self, worker_id: int, raw_queue: multiprocessing.Queue,
                 processed_queue: multiprocessing.Queue, config: dict) -> None:
        self.worker_id = worker_id
        self.raw_queue = raw_queue
        self.processed_queue = processed_queue
        self.secret_key: str = ""
        self.iterations: int = 0
        self.value_field: str = "metric_value"
        self.hash_field: str = "security_hash"
 
    def run(self) -> None:
        ...
 
 
class Aggregator:
    SENTINEL = None
 
    def __init__(self, processed_queue: multiprocessing.Queue,
                 output_queue: multiprocessing.Queue,
                 config: dict, num_workers: int) -> None:
        self.processed_queue = processed_queue
        self.output_queue = output_queue
        self.num_workers = num_workers
        self.window_size: int = 0
        self.value_field: str = "metric_value"
        self._window: list = []
 
    @staticmethod
    def compute_running_average(window: list) -> float:
        """Pure function — Functional Core."""
        ...
 
    def run(self) -> None:
        ...


# ── Output (mirrors plugins/outputs.py) ───────────────────────────────────────
 
class PipelineTelemetry(TelemetrySubject):
    """Observer Pattern — Subject."""
 
    def __init__(self, raw_queue: multiprocessing.Queue,
                 processed_queue: multiprocessing.Queue,
                 output_queue: multiprocessing.Queue, max_size: int) -> None:
        self._raw_queue = raw_queue
        self._processed_queue = processed_queue
        self._output_queue = output_queue
        self.max_size = max_size
        self._observers: list = []
    def subscribe(self, observer: Any) -> None:
        ...
 
    def get_stats(self) -> dict:
        ...
 
    def notify_observers(self) -> None:
        ...
 
 

class RealtimeDashboard:
    """Observer Pattern — Observer."""
    SENTINEL = None
 
    def __init__(self, output_queue: multiprocessing.Queue,
                 telemetry: PipelineTelemetry, config: dict) -> None:
        self.output_queue = output_queue
        self.telemetry = telemetry
        self._latest_stats: dict = {}
 
    def on_telemetry_update(self, stats: dict) -> None:
        ...
 
    def run(self) -> None:
        ...
 
# ── Main (mirrors main.py) ────────────────────────────────────────────────────
 
class MainModule:
    def load_config(self, path: str) -> dict:
        ...
 
    def run_input(self, raw_queue: multiprocessing.Queue, config: dict) -> None:
        ...
 
    def run_core_worker(self, worker_id: int, raw_queue: multiprocessing.Queue,
                        processed_queue: multiprocessing.Queue, config: dict) -> None:
        ...
 
    def run_aggregator(self, processed_queue: multiprocessing.Queue,
                       output_queue: multiprocessing.Queue,
                       config: dict, num_workers: int) -> None:
        ...
 
    def bootstrap(self) -> None:
        ...
 
