@startuml Phase3_ClassDiagram

title SDA Project Phase 3 - Generic Concurrent Real-Time Pipeline\nClass Diagram

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classFontSize 13
skinparam packageFontSize 13
skinparam ArrowColor #333333
skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #555555
skinparam packageBackgroundColor #F0F4FF
skinparam packageBorderColor #2E75B6
skinparam noteBorderColor #AAAAAA
skinparam noteBackgroundColor #FFFDE7

' ─────────────────────────────────────────────
package "core" {

  interface DataSink <<Protocol>> {
    +write(key: str, data: Any): None
  }



  interface PipelineService <<Protocol>> {
    +execute(raw_data: List[Any]): None
  }

  interface TelemetrySubject <<Protocol>> {
    +get_stats(): dict
  }
  
  class CoreWorker {
    -worker_id: int
    -raw_queue: Queue
    -processed_queue: Queue
    -secret_key: str
    -iterations: int
    -value_field: str
    -hash_field: str
    +SENTINEL: None
    +__init__(worker_id, raw_queue, processed_queue, config)
    +run(): None
  }

  class Aggregator {
    -processed_queue: Queue
    -output_queue: Queue
    -num_workers: int
    -window_size: int
    -value_field: str
    -_window: list
    +SENTINEL: None
    +__init__(processed_queue, output_queue, config, num_workers)
    +run(): None
    +{static} compute_running_average(window: list): float
  }

  note right of Aggregator
    Functional Core, Imperative Shell:
    compute_running_average() is the
    pure Functional Core (no side effects).
    run() is the Imperative Shell
    (manages state & queues).
  end note

  note right of CoreWorker
    Scatter pattern:
    N copies run in parallel,
    all pulling from the same raw_queue.
    verify_signature() is the
    pure Functional Core.
  end note
}


' ─────────────────────────────────────────────
package "core::functions" {
  class "verify_signature()" as VS <<function>> {
    +raw_value: float
    +signature: str
    +secret_key: str
    +iterations: int
    --
    returns bool
    (PBKDF2-HMAC-SHA256 — pure function)
  }
}


' ─────────────────────────────────────────────
package "plugins.inputs" {

  class StreamingCSVReader {
    -raw_queue: Queue
    -filepath: str
    -delay: float
    -schema: dict
    +SENTINEL: None
    +__init__(raw_queue, config)
    -{static} _build_schema(columns: list): dict
    -_map_row(raw_row: dict): dict
    +run(): None
  }

  note bottom of StreamingCSVReader
    Reads CSV row-by-row.
    Applies schema_mapping from config.json.
    Pushes generic packets into raw_queue.
    Drops poison pill (None) when done.
  end note
}



' ─────────────────────────────────────────────
package "plugins.outputs" {

  class PipelineTelemetry {
    -_raw_queue: Queue
    -_processed_queue: Queue
    -_output_queue: Queue
    +max_size: int
    -_observers: list
    +__init__(raw_queue, processed_queue, output_queue, max_size)
    +subscribe(observer): None
    +get_stats(): dict
    +notify_observers(): None
  }

  class RealtimeDashboard {
    -output_queue: Queue
    -telemetry: PipelineTelemetry
    -x_values: deque
    -y_values: deque
    -y_averages: deque
    -chart1_cfg: dict
    -chart2_cfg: dict
    -x_field: str
    -y_field: str
    -avg_field: str
    -_latest_stats: dict
    +SENTINEL: None
    +__init__(output_queue, telemetry, config)
    +on_telemetry_update(stats: dict): None
    +run(): None
    -_redraw(fig, ax_tel, ax_val, ax_avg, ...): None
  }

  note bottom of PipelineTelemetry
    Observer Pattern — Subject.
    Polls queue sizes & computes fill%.
    Color logic:
      Green  < 50% = flowing
      Yellow 50-80% = filling
      Red    > 80% = backpressure
  end note

  note bottom of RealtimeDashboard
    Observer Pattern — Observer.
    Subscribes to PipelineTelemetry.
    Renders 3 panels via matplotlib:
      1. Queue telemetry bars
      2. Live values line chart
      3. Running average line chart
  end note
}


' ─────────────────────────────────────────────
package "main" {
  class MainModule {
    +load_config(path: str): dict
    +run_input(raw_queue, config): None
    +run_core_worker(id, raw_queue, processed_queue, config): None
    +run_aggregator(processed_queue, output_queue, config, num_workers): None
    +bootstrap(): None
  }

  note right of MainModule
    Creates 3 bounded Queues.
    Wires all processes.
    Spawns:
      1x StreamingCSVReader (Input)
      Nx CoreWorker (Scatter, N=core_parallelism)
      1x Aggregator (Gather)
    Runs RealtimeDashboard in main thread.
  end note
}

' ─────────────────────────────────────────────
' Relationships

TelemetrySubject <|.. PipelineTelemetry : implements

CoreWorker ..> VS : calls
Aggregator ..> Aggregator : calls\ncompute_running_average()

PipelineTelemetry "1" o-- "1..*" RealtimeDashboard : notifies (Observer)
RealtimeDashboard ..> PipelineTelemetry : subscribes to

MainModule --> StreamingCSVReader : creates & starts\n(1 process)
MainModule --> CoreWorker : creates & starts\n(N processes — Scatter)
MainModule --> Aggregator : creates & starts\n(1 process — Gather)
MainModule --> PipelineTelemetry : creates
MainModule --> RealtimeDashboard : creates & runs\n(main thread)

StreamingCSVReader ..> "raw_queue\n<<Queue>>" : put(packet)
"raw_queue\n<<Queue>>" ..> CoreWorker : get()
CoreWorker ..> "processed_queue\n<<Queue>>" : put(verified_packet)
"processed_queue\n<<Queue>>" ..> Aggregator : get()
Aggregator ..> "output_queue\n<<Queue>>" : put(result_packet)
"output_queue\n<<Queue>>" ..> RealtimeDashboard : get()

@enduml
